# dotfiles

./: .editorconfig  .gitignore  .gitmodules  .tool-versions  AdGuard.adguardsettings  Brewfile  LICENSE  Mosaic.mosaicprefs  README.md  backup.sh  com.googlecode.iterm2.plist  demo.tape  install.sh  install.zsh  ncduignore  pyproject.toml  restore.sh  starship.toml
asdf/: versions
atuin/: config.toml
bat/: config
boto/: .gitignore
bottom/: bottom.toml
brew/: packages
broot/: conf.hjson
claude/: .gitignore  claude_desktop_config.json  settings.json  starship.toml
colima/: .gitignore
direnv/: direnvrc
docker/: .gitignore  config.json
ghostty/: config
git/: allowed_signers  config  ignore  local  local.example
glow/: glow.yml
gnupg/: .gitignore  backup.sh  restore.sh
hcloud/: .gitignore
helm/: .gitignore  repositories.yaml
home-assistant/: app.icns
homebrew/: trust.json
kitty/: kitty.conf
macos/: defaults.sh  reconcile.sh  symbolichotkeys.plist
mc/: hotlist  ini
mise/: config.toml
npm/: npmrc
phoenix/: config.js
python/: startup.py
ripgrep/: config  flags
sops/: .gitignore
ssh/: .gitignore  Darwin.conf  Linux.conf  authorized_keys  config  config.crypto  default.conf
teeldear/: config.toml
terraform/: .gitignore  config  config.tfrc
tests/: install_test.sh
threema/: app.icns
tmux/: tmux.conf
userscripts/: trello.com.js
vim/: vimrc
vscode/: keybindings.json  mcp.json  settings.json
zed/: keymap.json  settings.json
zsh/: +zinit-trace  .asdf-install  .asdf-upgrade  .keychain.zsh  .p10k.zsh  .path.zsh  IP  (+122 more)
(+66 files in other folders)
