[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "My personal dotfiles"
authors = ["Benedikt Böhm <bb@xnull.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
